force-app/main/default/objects/M_A_Target__c/M_A_Target__c.object-meta.xml
<CustomObject>
    <description>For M&amp;A Division Only</description>
    <label>M&amp;A Target</label>
    <nameField>
        <label>M&amp;A Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>M&amp;A Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>