force-app/main/default/objects/M_A_Target__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Company Name on this Opportunity</description>
    <inlineHelpText>The Company Name on this Opportunity</inlineHelpText>
    <label>Company Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Converted Leads are available for selection in this field</errorMessage>
        <filterItems>
            <field>M_A_Lead__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Converted Lead</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>M_A_Lead__c</referenceTo>
    <relationshipLabel>M&amp;A Targets</relationshipLabel>
    <relationshipName>M_A_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>