force-app/main/default/objects/M_A_Target__c/fields/Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>Direct_Phone__c</fullName>
    <formula>Company_Name__r.Direct_Phone__c</formula>
    <label>Direct Phone</label>
    <type>Text</type>
</CustomField>