force-app/main/default/objects/M_A_Target__c/fields/EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EBITDA__c</fullName>
    <description>Earnings before interest, taxes, depreciation and amortization</description>
    <inlineHelpText>Earnings before interest, taxes, depreciation and amortization</inlineHelpText>
    <label>EBITDA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>