force-app/main/default/objects/M_A_Target__c/fields/Estimated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Close_Date__c</fullName>
    <description>Date the deal is expected to be closed</description>
    <inlineHelpText>Date the deal is expected to be closed, important for pipeline and reporting</inlineHelpText>
    <label>Estimated Close Date</label>
    <type>Date</type>
</CustomField>