force-app/main/default/objects/M_A_Target__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <formula>Company_Name__r.Fax__c</formula>
    <label>Fax</label>
    <type>Text</type>
</CustomField>