force-app/main/default/objects/M_A_Target__c/fields/Linear_Feet__c.field-meta.xml
<CustomField>
    <fullName>Linear_Feet__c</fullName>
    <label>Linear Feet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>