force-app/main/default/objects/M_A_Target__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <formula>Company_Name__r.Mobile__c</formula>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>