force-app/main/default/objects/M_A_Target__c/fields/of_Employees__c.field-meta.xml
<CustomField>
    <fullName>of_Employees__c</fullName>
    <description>Number of Employees at Target</description>
    <inlineHelpText>Number of Employees at Target</inlineHelpText>
    <label># of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>