force-app/main/default/objects/M_A_Target__c/fields/of_Locations__c.field-meta.xml
<CustomField>
    <fullName>of_Locations__c</fullName>
    <description>Number of Locations for Opportunity</description>
    <inlineHelpText>Number of Locations for Opportunity</inlineHelpText>
    <label># of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>