force-app/main/default/objects/M_A_Target__c/fields/Primary_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Full_Name__c</fullName>
    <formula>Company_Name__r.First_Name__c &amp; &quot; &quot;&amp; Company_Name__r.Last_Name__c</formula>
    <label>Primary Contact Full Name</label>
    <type>Text</type>
</CustomField>