force-app/main/default/objects/M_A_Target__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <description>Probability of the Deal Closing</description>
    <formula>IF(
 RecordType.Name = &quot;Direct Process&quot;,

CASE( Stage__c,
&quot;1 - Prospect&quot;, 0.01,
&quot;2 - NDA &amp; Info Exchange&quot;, 0.10,
&quot;3 - Analysis/Valuation&quot;, 0.25,
&quot;4 - LOI&quot;, 0.50,
&quot;5 - Due Diligence&quot;, 0.85,
&quot;6 - Closed&quot;, 1.0,
0.0
)
,

CASE( Stage__c,
&quot;1 - Prospect&quot;, 0.01,
&quot;2 - NDA &amp; Info Exchange&quot;, 0.15,
&quot;3 - Analysis/Valuation&quot;, 0.25,
&quot;4 - LOI&quot;, 0.50,
&quot;5 - Due Diligence&quot;, 0.9,
&quot;6 - Closed&quot;, 1.0,
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Probability of the Deal Closing</inlineHelpText>
    <label>Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>