force-app/main/default/objects/M_A_Target__c/fields/Storage_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Storage_Revenue__c</fullName>
    <label>Storage Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>