force-app/main/default/objects/M_A_Target__c/fields/Target_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Target_Revenue__c</fullName>
    <description>Target Revenue Purchase Price</description>
    <inlineHelpText>Target Revenue Purchase Price</inlineHelpText>
    <label>Target Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>