force-app/main/default/objects/M_A_Target__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Company_Name__r.Title__c</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>