force-app/main/default/objects/M_A_Target__c/fields/Total_Cubic_Feet__c.field-meta.xml
<CustomField>
    <fullName>Total_Cubic_Feet__c</fullName>
    <formula>Cubic_Feet__c +  Linear_Feet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cubic Feet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>