force-app/main/default/objects/M_A_Target__c/fields/Utilization__c.field-meta.xml
<CustomField>
    <fullName>Utilization__c</fullName>
    <description>User will enter and it will be based on Building Capacity and Units.</description>
    <inlineHelpText>Based on Building Capacity and Units.</inlineHelpText>
    <label>Utilization (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>