force-app/main/default/objects/M_A_Target__c/recordTypes/Broker_Process.recordType-meta.xml
<RecordType>
    <fullName>Broker_Process</fullName>
    <active>true</active>
    <label>Broker Process</label>
</RecordType>