force-app/main/default/objects/M_A_Target__c/recordTypes/Direct_Process.recordType-meta.xml
<RecordType>
    <fullName>Direct_Process</fullName>
    <active>true</active>
    <label>Direct Process</label>
</RecordType>