force-app/main/default/objects/M_A_Target__c/listViews/X1_Open.listView-meta.xml
<ListView>
    <fullName>X1_Open</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>Probability__c</columns>
    <columns>Estimated_Close_Date__c</columns>
    <columns>Pipeline_Revenue__c</columns>
    <columns>Target_Revenue__c</columns>
    <columns>EBITDA__c</columns>
    <columns>Purchase_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>1 - Prospect,2 - NDA &amp; Info Exchange,3 - Analysis/Valuation,4 - LOI</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>5 - Due Diligence</value>
    </filters>
    <label>1. Open</label>
    <language>en_US</language>
</ListView>