force-app/main/default/objects/M_A_Target__c/listViews/X2_Closed.listView-meta.xml
<ListView>
    <fullName>X2_Closed</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>Probability__c</columns>
    <columns>Estimated_Close_Date__c</columns>
    <columns>Pipeline_Revenue__c</columns>
    <columns>Target_Revenue__c</columns>
    <columns>EBITDA__c</columns>
    <columns>Purchase_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>6 - Closed</value>
    </filters>
    <label>2. Closed</label>
    <language>en_US</language>
</ListView>