force-app/main/default/objects/M_A_Target__c/listViews/X3_Acquired_by_Competitor.listView-meta.xml
<ListView>
    <fullName>X3_Acquired_by_Competitor</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>Probability__c</columns>
    <columns>Estimated_Close_Date__c</columns>
    <columns>Pipeline_Revenue__c</columns>
    <columns>Target_Revenue__c</columns>
    <columns>EBITDA__c</columns>
    <columns>Purchase_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Acquired by Competitor</value>
    </filters>
    <label>3. Acquired by Competitor</label>
    <language>en_US</language>
</ListView>