force-app/main/default/objects/M_A_Target__c/listViews/X4_All_Targets.listView-meta.xml
<ListView>
    <fullName>X4_All_Targets</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>Probability__c</columns>
    <columns>Estimated_Close_Date__c</columns>
    <columns>Pipeline_Revenue__c</columns>
    <columns>Target_Revenue__c</columns>
    <columns>EBITDA__c</columns>
    <columns>Purchase_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>4. All Targets</label>
    <language>en_US</language>
</ListView>